Make sure .msg-container is not overflowing

--- a/scss/message/_message.scss
+++ b/scss/message/_message.scss
@@ -92,6 +92,7 @@
   .msg-container {
     position: relative;
     display: inline-block;
+    max-width: 100%;
     border-radius: 16px;
     padding-right: 12px;
     padding-left: 12px;
